logging/kib-03-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: kube-logging
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.2.0
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
      - name: gatekeeper
        image: keycloak/keycloak-gatekeeper
        args:
          - --config
          - /etc/gatekeeper/gatekeeper.yml
        ports:
        - containerPort: 8080
        volumeMounts:
          - name:  gatekeeper-config
            mountPath:  /etc/gatekeeper
      volumes:
      - name: gatekeeper-config
        configMap:
          name: kibana-gatekeeper
