logging/kib-04-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: kube-logging
spec:
  rules:
  - host: kibana.tbrb.dev
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 8080
